--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch==2.2.0
-torchvision==0.17.0
-torchaudio==2.2.0
+torch
+torchvision
+torchaudio
 soundfile
 numpy==1.26.4
 torch_audiomentations
@@ -10,6 +10,9 @@ pandas
 wandb
 comet_ml
 hydra-core
+datasets
+editdistance
+wget
 
 black
 isort
