--- a/src/configs/writer/wandb.yaml
+++ b/src/configs/writer/wandb.yaml
@@ -1,8 +1,9 @@
 _target_: src.logger.WandBWriter
 project_name: "pytorch_template_asr_example"
 entity: null
-run_name: "plain_ds2_all_libri_5layers"
+run_name: "freq_mask"
 mode: "online"
 loss_names: ["loss"] # which losses to log (useful for multi-loss tasks, s.a. GANs)
 log_checkpoints: False # set to True if you want to log save_dir with checkpoints to W&B
 id_length: 8 # length of the run_id
+
