--- a/src/configs/baseline.yaml
+++ b/src/configs/baseline.yaml
@@ -1,8 +1,8 @@
 defaults:
   - model: ds2
   - writer: wandb
-  - metrics: example
-  - datasets: onebatchtest
+  - metrics: bs
+  - datasets: libri_all
   - dataloader: example
   - transforms: example_only_instance
   - _self_
@@ -20,6 +20,7 @@ loss_function:
   _target_: src.loss.CTCLossWrapper
 text_encoder:
   _target_: src.text_encoder.CTCTextEncoder
+  beam_size: 5
 trainer:
   log_step: 50
   n_epochs: 200
@@ -29,7 +30,7 @@ trainer:
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: auto # device name or "auto"
   override: True # if True, will override the previous run with the same name
-  monitor: "min val_WER_(Argmax)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  monitor: "min val_WER_(BeamSearch)" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
   save_period: 5 # checkpoint each save_period epochs in addition to the best epoch
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
